refactor json:api format
