# temp-04/src/core/errors/errors.handler.ts
@@ -1,42 +1,60 @@
-import { Response } from 'express';
+import { Request, Response } from 'express';
 import { RepositoryNotFoundError } from './repository-not-found.error';
 import { HttpStatus } from '../types/http-statuses';
 import { DomainError } from './domain.error';
 import { createErrorMessages } from './create-error-messages';
 
-export function errorsHandler(error: unknown, res: Response): void {
+export function errorsHandler(
+  error: unknown,
+  res: Response,
+  req: Request,
+): void {
   if (error instanceof RepositoryNotFoundError) {
-    const httpStatus = HttpStatus.NotFound;
-
-    res.status(httpStatus).send(
-      createErrorMessages([
-        {
-          status: httpStatus,
-          detail: error.message,
-        },
-      ]),
+    res.status(HttpStatus.NotFound).send(
+      createErrorMessages(
+        [
+          {
+            status: String(HttpStatus.NotFound),
+            title: 'Not Found',
+            detail: error.message,
+          },
+        ],
+        req.path,
+      ),
     );
-
     return;
   }
 
   if (error instanceof DomainError) {
-    const httpStatus = HttpStatus.UnprocessableEntity;
-
-    res.status(httpStatus).send(
-      createErrorMessages([
-        {
-          status: httpStatus,
-          source: error.source,
-          detail: error.message,
-          code: error.code,
-        },
-      ]),
+    res.status(HttpStatus.UnprocessableEntity).send(
+      createErrorMessages(
+        [
+          {
+            status: String(HttpStatus.UnprocessableEntity),
+            title: 'Unprocessable Entity',
+            code: error.code,
+            detail: error.message,
+            source: error.source
+              ? { pointer: `/data/attributes/${error.source}` }
+              : undefined,
+          },
+        ],
+        req.path,
+      ),
     );
-
     return;
   }
 
-  res.status(HttpStatus.InternalServerError);
-  return;
+  res.status(HttpStatus.InternalServerError).send(
+    createErrorMessages(
+      [
+        {
+          status: String(HttpStatus.InternalServerError),
+          title: 'Internal Server Error',
+          // detail НЕ добавляем - не хотим раскрывать детали
+        },
+      ],
+      req.path,
+    ),
+  );
 }
