# temp-04/src/core/middlewares/validation/input-validtion-result.middleware.ts
@@ -8,29 +8,34 @@ import { ValidationErrorType } from '../../errors/types/validationError';
 import { HttpStatus } from '../../types/http-statuses';
 import { createErrorMessages } from '../../errors/create-error-messages';
 
-const formaValidationError = (error: ValidationError): ValidationErrorType => {
+const formatValidationError = (error: ValidationError): ValidationErrorType => {
   const expressError = error as unknown as FieldValidationError;
 
   return {
-    status: HttpStatus.BadRequest,
-    source: expressError.path,
+    status: String(HttpStatus.BadRequest),
+    title: 'Validation Error',
     detail: expressError.msg,
+    source: {
+      pointer: expressError.path, // будет отформатирован в createErrorMessages
+    },
   };
 };
 
 export const inputValidationResultMiddleware = (
-  req: Request<{}, {}, {}, {}>,
+  req: Request,
   res: Response,
   next: NextFunction,
 ) => {
   const errors = validationResult(req)
-    .formatWith(formaValidationError)
+    .formatWith(formatValidationError)
     .array({ onlyFirstError: true });
 
   if (!errors.length) {
     next();
     return;
   }
-  res.status(HttpStatus.BadRequest).json(createErrorMessages(errors));
-  return;
+
+  res
+    .status(HttpStatus.BadRequest)
+    .json(createErrorMessages(errors, req.path));
 };
